Fixing broken build after rebasing from remote trunk

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,10 @@ ext {
     mavenPassword = project.hasProperty('mavenPassword') ? project.mavenPassword : ''
 }
 
+def isVerificationRequired(project) {
+  project.gradle.startParameter.taskNames.contains("uploadArchives")
+}
+
 apply from: file('wrapper.gradle')
 apply from: file('gradle/license.gradle')
 apply from: file('scala.gradle')
